--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,5 +17,7 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "@typescript-eslint/ban-ts-comment": "off",
+        "@typescript-eslint/no-explicit-any": "off"
     }
 }
