--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "@typescript-eslint/ban-ts-comment": "off",
-        "@typescript-eslint/no-explicit-any": "off"
+        "@typescript-eslint/ban-ts-comment": "off"
+        // "@typescript-eslint/no-explicit-any": "off"
     }
 }
